--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -114,6 +114,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 136.244.111.163;
+allow 138.124.50.136;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -256,7 +257,6 @@ allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.117.215.9;
-allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.129.61.1;
 allow 185.129.61.10;
@@ -863,8 +863,9 @@ allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
-allow 23.154.177.11;
+allow 23.154.177.10;
 allow 23.154.177.12;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -890,6 +891,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.78;
@@ -1047,6 +1049,10 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:e5c0:33ba::2;
+allow 2a01:e5c0:506a::2;
+allow 2a01:e5c0:5130::2;
+allow 2a01:e5c0:5171::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
@@ -1519,6 +1525,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
+allow 45.150.32.250;
 allow 45.154.98.26;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1573,6 +1580,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.102.89;
@@ -1653,6 +1661,7 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
 allow 82.68.49.227;
+allow 83.147.216.197;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1679,6 +1688,7 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
+allow 89.169.55.174;
 allow 89.187.143.31;
 allow 89.221.215.139;
 allow 89.221.217.206;
@@ -1687,7 +1697,6 @@ allow 89.236.112.100;
 allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
-allow 89.76.203.227;
 allow 91.132.144.59;
 allow 91.139.160.150;
 allow 91.202.5.104;
