--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -859,12 +859,12 @@ allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.27;
+allow 23.137.254.217;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -920,6 +920,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fc24:10:dbf5::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
