--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -130,6 +130,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fc24:10:dbf5::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
