--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -859,12 +859,12 @@ deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.110;
 deny 23.137.253.27;
+deny 23.137.254.217;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
-deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
@@ -920,6 +920,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
+deny 2602:fc24:10:dbf5::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
