--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -691,7 +691,6 @@ set_real_ip_from 199.195.251.78;
 set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
-set_real_ip_from 2001:15e8:110:7d00::30b;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
@@ -865,6 +864,7 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
+set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
@@ -1050,6 +1050,7 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
@@ -1538,7 +1539,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
@@ -1555,6 +1555,7 @@ set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.101.107.151;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 47.243.99.161;
@@ -1638,7 +1639,6 @@ set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.132.143.85;
 set_real_ip_from 80.210.78.252;
-set_real_ip_from 80.211.204.89;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
@@ -1686,6 +1686,7 @@ set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
+set_real_ip_from 89.76.203.227;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.202.5.104;
