--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -103,7 +103,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 121.127.37.151;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -253,6 +252,7 @@ allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.117.215.9;
+allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.129.61.1;
 allow 185.129.61.10;
@@ -279,7 +279,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -630,6 +629,7 @@ allow 193.218.118.137;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.218.118.94;
@@ -794,7 +794,6 @@ allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -858,7 +857,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1394,6 +1392,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1468,7 +1467,6 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 38.97.116.244;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1678,6 +1676,7 @@ allow 89.236.112.100;
 allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
+allow 89.76.203.227;
 allow 91.132.144.59;
 allow 91.139.160.150;
 allow 91.202.5.104;
