--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -103,7 +103,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -253,6 +252,7 @@ set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.117.215.9;
+set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
@@ -279,7 +279,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -630,6 +629,7 @@ set_real_ip_from 193.218.118.137;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
+set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.218.118.91;
 set_real_ip_from 193.218.118.94;
@@ -794,7 +794,6 @@ set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -858,7 +857,6 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.13;
-set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -1394,6 +1392,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1468,7 +1467,6 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
-set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
@@ -1678,6 +1676,7 @@ set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
+set_real_ip_from 89.76.203.227;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.202.5.104;
