--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -191,6 +191,7 @@ allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -1041,6 +1042,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:5e0:36:c311::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1051,7 +1053,6 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1471,6 +1472,7 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 38.97.116.244;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1643,7 +1645,6 @@ allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
-allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1707,6 +1708,7 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.231.88;
 allow 93.99.104.194;
+allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
