--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -677,7 +677,6 @@ allow 198.58.107.53;
 allow 198.96.155.3;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.53.136;
@@ -855,7 +854,9 @@ allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
+allow 23.137.253.254;
 allow 23.137.253.27;
+allow 23.137.254.137;
 allow 23.137.254.217;
 allow 23.153.248.33;
 allow 23.153.248.34;
@@ -891,6 +892,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
+allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -918,13 +920,16 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fc24:10:61b::1;
 allow 2602:fc24:10:dbf5:a282:c7a5:8a27:3861;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
+allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
@@ -937,7 +942,6 @@ allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe09:ba16;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1534,7 +1538,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1699,6 +1702,7 @@ allow 92.223.2.52;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
+allow 92.33.155.77;
 allow 93.113.25.189;
 allow 93.113.25.251;
 allow 93.123.12.112;
