--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -143,6 +143,7 @@ allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
 allow 154.213.185.183;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.213.187.36;
@@ -280,7 +281,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -1133,6 +1133,7 @@ allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:6589::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
